--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.23.1",
     "react-slick": "^0.30.2",
+    "react-spinners": "^0.13.8",
     "sort-by": "^1.2.0",
     "swiper": "^11.1.3"
   },
