--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.40.1",
     "axios": "^1.7.2",
     "firebase": "^10.12.2",
     "framer-motion": "^11.2.6",
@@ -25,6 +26,7 @@
     "react-slick": "^0.30.2",
     "react-spinners": "^0.13.8",
     "sort-by": "^1.2.0",
+    "sweetalert2": "^11.11.1",
     "swiper": "^11.1.3"
   },
   "devDependencies": {
